# cctmog

./: .gitignore  .gitmodules  Cargo.toml  README.md  cli_client.rs  demo_cli_client.rs  start_cctmog.sh  tokei.20250924  tokei.20250930  tokei_detailed.20250930
client/: Cargo.toml
client/src/: app.rs  embedded_server.rs  game.rs  main.rs  messages.rs  ws.rs
client/src/games/: mod.rs  omaha.rs  seven_twenty_seven.rs  texas_holdem.rs
client/src/states/: comments.rs  connect_overlay.rs  dealer_selection.rs  dealer_splash.rs  game.rs  game_selection.rs  lounge.rs  mod.rs  name_input.rs  splash.rs  table_browser.rs  table_choice.rs  table_creation.rs
client/src/ui/: actions.rs  canvas.rs  cards.rs  game_table.rs  header.rs  logo.rs  mod.rs  player_options.rs  shared.rs  state.rs  table.rs  theme.rs  views.rs  widgets.rs  ws.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  messages.rs  persistence.rs  tests.rs
src/: main.rs
