[package]
name = "cctmog"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["wgpu", "tokio", "svg", "canvas", "image"] }
iced_widget = { version = "0.13", features = ["image" ]}
cctmog-protocol = { path = "../protocol" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = "0.23"
futures = "0.3"
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
image = "0.25.6"
rand = "0.8"
# Server dependencies for embedded server
axum = { version = "0.7", features = ["ws"] }
tungstenite = "0.21"
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }