
[package]
name = "cctmog-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.39", features = ["full"] }
tokio-tungstenite = "0.23"
tungstenite = "0.21"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
cctmog-protocol = { path = "../protocol" }
anyhow = "1"
thiserror = "1"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
zeromq = "0.4"

[dev-dependencies]
tempfile = "3"
